# localstack-unit-test

./: .flake8  .gitignore  .justfile  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  run_job.sh  serverless.yml
config/: dev.yml  local.yml  prod.yml
docker/: docker-compose-just-dynamo.yml  docker-compose-localstack.yml
helpers/: ingestion_processing.py  logger.py  secrets_manager.py
serverless/: step_functions.yml
src/: aws_glue_libs.sh  basic.py  create_glue_job.py  spark_job.py
